package Domain.Usuario.Accion;

public class MailSender {

  public void enviar(String adress, String message){
    //ENVIAR MAIL
  }
}
