package Domain.Usuario.Accion;

public class NotificacionService {
  public void notify(String text){
    // ENVIAR NOTIFICACION
  }
}
